--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,12 @@
     <version>3.7.4</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/net.java.dev.timingframework/timingframework -->
+<dependency>
+    <groupId>net.java.dev.timingframework</groupId>
+    <artifactId>timingframework</artifactId>
+    <version>1.0</version>
+</dependency>
+
     </dependencies>
 </project>
